Fix: css varibles readability

--- a/packages/searchmate-js/src/markdown.css
+++ b/packages/searchmate-js/src/markdown.css
@@ -49,7 +49,7 @@
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   font-size: 16px;
   line-height: 1.5;
-  color: var(--searchmate-path-body-color);
+  color: inherit;
   word-wrap: break-word;
 
   & .octicon {
@@ -89,8 +89,8 @@
 
   & a {
     background-color: transparent;
-    color: var(--searchmate-link-colors);
     text-decoration: none;
+    color: inherit;
   }
 
   & abbr[title] {
