--- a/packages/searchmate-js/src/searchmate.css
+++ b/packages/searchmate-js/src/searchmate.css
@@ -45,7 +45,7 @@
     box-sizing: border-box;
     border-radius: var(--searchmate-container-radius);
     margin-top: var(--searchmate-padding-10);
-    border: 1px solid var(--searchmate-input-color);
+    border: 1px solid var(--searchmate-search-color);
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.1);
 
     @media (min-width: 600px) {
@@ -67,7 +67,6 @@
         top: 50%;
         transform: translateY(-50%);
         left: var(--searchmate-padding-4);
-        color: var(--searchmate-input-color);
         color: var(--searchmate-search-icon-color);
         stroke-width: 2px;
       }
@@ -84,7 +83,8 @@
         border-top-right-radius: var(--searchmate-container-radius);
         font-size: var(--searchmate-input-font-size);
         color: var(--searchmate-input-text-color);
-        border-bottom: 1px solid var(--searchmate-input-color);
+        border-bottom: 1px solid var(--searchmate-input-border-color);
+        background-color: var(--searchmate-input-bg-color);
         padding-left: calc(
           var(--searchmate-padding-4) + var(--searchmate-padding-8)
         );
@@ -112,7 +112,7 @@
         width: 100%;
         padding-left: var(--searchmate-padding-2);
         padding-right: var(--searchmate-padding-2);
-        color: var(--searchmate-result-color);
+        color: var(--searchmate-result-text-color);
         position: relative;
         margin-top: var(--searchmate-padding-4);
 
@@ -123,6 +123,7 @@
           justify-content: center;
           padding: var(--searchmate-padding-4);
           border-radius: var(--searchmate-input-radius);
+          background-color: var(--searchmate-result-bg);
           color: inherit;
           width: 100%;
           text-align: left;
@@ -151,6 +152,7 @@
         & .searchmate-result-path.searchmate-result-selected {
           background-color: var(--searchmate-selected-bg);
           border: 1px solid var(--searchmate-selected-border-color);
+          color: var(--searchmate-selected-color);
         }
 
         & .searchmate-result-heading {
@@ -167,11 +169,12 @@
           position: relative;
           border: 1px solid #ffffff00;
           text-decoration: none;
+          color: var(--searchmate-result-text-color);
 
           & * {
             font-size: inherit;
             font-weight: normal;
-            color: var(--searchmate-result-color);
+            color: inherit;
           }
 
           & .searchmate-hash-icon {
@@ -185,6 +188,7 @@
         & .searchmate-result-heading.searchmate-result-selected {
           background-color: var(--searchmate-selected-bg);
           border: 1px solid var(--searchmate-selected-border-color);
+          color: var(--searchmate-selected-color);
         }
       }
 
@@ -195,7 +199,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        color: var(--searchmate-result-color);
+        color: var(--searchmate-result-text-color);
         opacity: 0.5;
 
         & .searchmate-x-notfound-circle {
